--- a/Códigos/Códigos 4/Catálogo 2.html
+++ b/Códigos/Códigos 4/Catálogo 2.html
@@ -1,168 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Cinéfilos</title>
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    crossorigin="anonymous"
-  />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="Catalogo.css" />
   <style>
-    body {
-      background-color: black;
-      color: white;
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      /* REMOVIDO align-items: center para evitar problemas de largura */
-    }
 
-    main {
-      padding-top: 56px; /* Espaço para navbar fixa */
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .container {
-      width: 100%;
-      max-width: 1200px;
-      height: 300px;
-      overflow: hidden;
-      position: relative;
-    }
-
-    .container img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-    }
-
-    .overlay {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      padding: 40px;
-      width: 100%;
-      height: 50%;
-      background: linear-gradient(
-        to top,
-        rgba(0, 0, 0, 0.7),
-        rgba(0, 0, 0, 0)
-      );
-      color: white;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-    }
-
-    .Botão {
-      display: flex;
-      justify-content: center;
-      margin: 20px 0;
-      width: 100%;
-      max-width: 300px;
-    }
-
-    .Botão button {
-      width: 100%;
-    }
-
-    /* Cards */
-    .quadrados {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-      padding: 20px;
-      width: 100%;
-      max-width: 1200px;
-    }
-
-    .card {
-      width: 100%;
-      max-width: 300px;
-      background-color: #1c1c1c;
-      border: 1px solid #333;
-      border-radius: 8px;
-    }
-
-    .card-body {
-      padding: 20px;
-      text-align: center;
-      color: aliceblue;
-    }
-
-    /* Responsividade */
-    @media (max-width: 768px) {
-      .container {
-        height: 200px;
-      }
-
-      .overlay {
-        padding: 20px;
-        height: auto;
-        text-align: center;
-      }
-
-      .card-body {
-        padding: 15px;
-      }
-
-      .Botão {
-        padding: 0 15px;
-        max-width: 100%;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .container {
-        height: 160px;
-      }
-
-      .overlay h2 {
-        font-size: 1rem;
-      }
-
-      .card-body {
-        padding: 10px;
-      }
-
-      .quadrados {
-        padding: 10px;
-      }
-    }
-
-    .text-body-secondary {
-      color: aliceblue;
-    }
-
-    footer {
-      margin-top: auto;
-      text-align: center;
-      width: 100%;
-      background-color: grey;
-      color: white;
-      padding: 20px;
-    }
   </style>
 </head>
+
 <body>
   <header>
     <nav class="navbar fixed-top bg-body-tertiary" data-bs-theme="dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Cinéfilos</a>
-        <a class="navbar-brand" href="Catálogo.html">Início</a>
-        <a class="navbar-brand" href="Login.html">Login</a>
-        <a class="navbar-brand" href="Sobre.html">Sobre</a>
-      </div>
+      <a class="navbar-brand" href="#">Cinéfilos</a>
+      <a class="navbar-brand" href="Catálogo.html">Início</a>
+      <a class="navbar-brand" href="Login.html">Login</a>
+      <a class="navbar-brand" href="Sobre.html">Sobre</a>
     </nav>
   </header>
 
@@ -178,39 +35,124 @@
           </h2>
         </div>
       </div>
+      
     </div>
 
-    <div class="Botão">
-      <button onclick="document.location='login.html'" type="button" class="btn btn-success">
-        Junte-se a Nós
-      </button>
+    <div class="main-content">
+      <div class="Botão">
+        <button type="button" class="btn btn-success">
+          Bem Vindo à Cinéfilos . Com
+        </button>
+      </div>
+      <p>Você assistiu, sentiu, pensou — agora é hora de compartilhar. No Cinéfilos.com, todos podem escrever suas
+        próprias críticas de filmes e ler o que outros cinéfilos têm a dizer. Navegue por avaliações sinceras, descubra
+        novos títulos e participe de uma comunidade movida pela paixão pelo cinema.</p>
+
+      <h2>Cinéfilos permite</h2>
+
+      <div class="quadrados">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Acompanhar os filmes que você assistiu</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Outro card</h5>
+            <p class="card-text">Avalie filmes com uma escala de 5 estrelas</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Outro card</h5>
+            <p class="card-text">Dar sua opinião ou responder a opinião de outros usuário</p>
+          </div>
+        </div>
+      </div>
+      <h1>Filmes</h1>
+      <div class="filmes">
+        <div class="card">
+          <img src="Batman.jpeg" class="card-img-top" alt="Batman">
+          <div class="card-body">
+            <h5 class="card-title">Batman</h5>
+            <p class="card-text">Por Enzo Gabriel</p>
+            <a href="#" class="btn btn-primary">Crítica</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="Batman.jpeg" class="card-img-top" alt="Batman">
+          <div class="card-body">
+            <h5 class="card-title">Batman</h5>
+            <p class="card-text">Por Enzo Gabriel</p>
+            <a href="#" class="btn btn-primary">Crítica</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="Batman.jpeg" class="card-img-top" alt="Batman">
+          <div class="card-body">
+            <h5 class="card-title">Batman</h5>
+            <p class="card-text">Por Enzo Gabriel</p>
+            <a href="#" class="btn btn-primary">Crítica</a>
+          </div>
+        </div>
+
+        <!-- Adicione mais cards aqui -->
+      </div>
+
     </div>
-
-    <h2>Cinéfilos permite</h2>
-    <div class="quadrados">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Acompanhar os filmes que você assistiu</p>
+        <section class="formulario-critica">
+      <h2>Envie sua crítica</h2>
+      <form action="contato.php" method="post">
+        <div class="mb-3">
+          <label for="nomeUsuario" class="form-label">Seu nome</label>
+          <input type="text" class="form-control" id="nomeUsuario" placeholder="Digite seu nome" required />
         </div>
-      </div>
 
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Outro card</h5>
-          <p class="card-text">Avalie filmes com uma escala de 5 estrelas</p>
+        <div class="mb-3">
+          <label for="nomeUsuario" class="form-label">Seu nome</label>
+          <input type="text" class="form-control" id="nomeUsuario" placeholder="Digite seu nome" required />
         </div>
-      </div>
 
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Outro card</h5>
-          <p class="card-text">Dar sua opinião ou responder a opinião de outros usuário</p>
+
+        <div class="mb-3">
+          <label for="e-mail" class="form-label">E-mail:</label>
+          <input type="email" class="form-control" id="e-mail" placeholder="aaaa@aaaa" required />
         </div>
-      </div>
+
+        <div class="mb-3">
+          <label for="tel" class="form-label">Telefone:</label>
+          <input type="tel" class="form-control" id="tel" placeholder="(00)0000-0000" required />
+        </div>
+        
+<div class="mb-3">
+          <label for="assunto">Assunto:</label>
+        <select name="assunto" class="form-control" id="Assunto">
+          <option value="mensagem">Mensagem para o Site</option>
+          <option value="crítica">Minha Crítica</option>
+        </select>
+        </div>
+
+        <div class="mb-3">
+          <label for="titulo" class="form-label">Título:</label>
+          <input type="text" class="form-control" id="titulo" placeholder="Título da Mensagem...." required />
+        </div>
+
+        <div class="mb-3">
+          <label for="critica" class="form-label">Mensagem:</label>
+          <textarea class="form-control" id="critica" rows="4" placeholder="Conteúdo da Mensagem..." required></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Enviar crítica</button>
+      </form>
+    </section>
+
+  </div>
     </div>
-
-    <!-- resto do conteúdo -->
 
   </main>
 
@@ -218,9 +160,8 @@
     <h5>Desenvolvido por João Victor e Lucas Antônio</h5>
   </footer>
 
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-    crossorigin="anonymous"
-  ></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
