--- a/Códigos/Códigos 4/Catálogo 2.html
+++ b/Códigos/Códigos 4/Catálogo 2.html
@@ -35,7 +35,7 @@
           </h2>
         </div>
       </div>
-      
+
     </div>
 
     <div class="main-content">
@@ -103,9 +103,32 @@
 
         <!-- Adicione mais cards aqui -->
       </div>
+      <br>
+      <h1>Sobre Nós</h1>
+      <p>
+        Cinéfilos.com é um site dedicado aos amantes do cinema, onde qualquer usuário pode enviar suas próprias críticas
+        de filmes por meio de um formulário simples e acessível. A plataforma surgiu em 2020, criada por um grupo de
+        amigos apaixonados por cinema, com a ideia de dar voz ao público comum — não apenas aos críticos profissionais.
+        <br>
+        <strong>Missão:</strong> Democratizar a crítica cinematográfica, valorizando a opinião de todos os espectadores.
+        <br>
+        <strong>Visão:</strong> Ser a maior comunidade de críticos amadores do Brasil, promovendo debates construtivos e
+        apaixonados
+        sobre cinema.
+      </p>
+      <p><Strong>Valores:</Strong></p>
+      <ul>
+        <li>Liberdade de expressão</li>
+        <li>Respeito à diversidade de opiniões</li>
 
-    </div>
-        <section class="formulario-critica">
+        <li>Paixão pela sétima arte</li>
+
+        <li>Comunidade e colaboração</li>
+      </ul>
+      <br>
+      <p>Cinéfilos.com é mais do que um site de críticas — é um espaço para compartilhar experiências, descobrir novos
+        olhares sobre o cinema e fortalecer a cultura audiovisual entre o público geral.</p>
+         <section class="formulario-critica">
       <h2>Envie sua crítica</h2>
       <form action="contato.php" method="post">
         <div class="mb-3">
@@ -128,13 +151,13 @@
           <label for="tel" class="form-label">Telefone:</label>
           <input type="tel" class="form-control" id="tel" placeholder="(00)0000-0000" required />
         </div>
-        
-<div class="mb-3">
+
+        <div class="mb-3">
           <label for="assunto">Assunto:</label>
-        <select name="assunto" class="form-control" id="Assunto">
-          <option value="mensagem">Mensagem para o Site</option>
-          <option value="crítica">Minha Crítica</option>
-        </select>
+          <select name="assunto" class="form-control" id="Assunto">
+            <option value="mensagem">Mensagem para o Site</option>
+            <option value="crítica">Minha Crítica</option>
+          </select>
         </div>
 
         <div class="mb-3">
@@ -144,14 +167,17 @@
 
         <div class="mb-3">
           <label for="critica" class="form-label">Mensagem:</label>
-          <textarea class="form-control" id="critica" rows="4" placeholder="Conteúdo da Mensagem..." required></textarea>
+          <textarea class="form-control" id="critica" rows="4" placeholder="Conteúdo da Mensagem..."
+            required></textarea>
         </div>
 
         <button type="submit" class="btn btn-primary">Enviar crítica</button>
       </form>
     </section>
 
-  </div>
+    </div>
+   
+    </div>
     </div>
 
   </main>
