--- a/Códigos/Códigos 4/Catálogo 2.html
+++ b/Códigos/Códigos 4/Catálogo 2.html
@@ -1,225 +1,222 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+body {
+  background-color: black;
+  color: white;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Cinéfilos</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-    crossorigin="anonymous" />
-  <link rel="stylesheet" href="Catalogo.css" />
-  <style>
+main {
+  padding-top: 70px;
+  width: 100%;
+}
 
-  </style>
-</head>
+.navbar {
+  padding-left: 120px;
+  padding-right: 120px;
+   white-space: nowrap; 
+  height: 70px; 
+   overflow: hidden;
+}
 
-<body>
-  <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" data-bs-theme="dark">
-      <div class="container-fluid d-flex justify-content-between align-items-center">
-        <a class="navbar-brand" href="#">Cinéfilos</a>
-        <div class="d-flex gap-4">
-          <a class="navbar-brand" href="#Início">Início</a>
-          <a class="navbar-brand" href="#Sobre">Sobre</a>
-          <a class="navbar-brand" href="#Localização">Localização</a>
-          <a class="navbar-brand" href="#Contato">Contato</a>
-        </div>
-      </div>
-    </nav>
+.navbar-brand {
+  margin-right: 20px;
+   font-size: 1rem;
+  white-space: nowrap;
+}
 
-  </header>
+.container {
+  width: 100%;
+  max-width: 1200px;
+  height: 180px; /* altura reduzida */
+  overflow: hidden;
+  position: relative;
+  margin: 0 auto;
+}
 
-  <main>
-    <div class="container">
-      <section id="Início">
-        <img src="Banner.jpg" alt="Banner" />
-        <div class="overlay">
-          <div class="legenda">
-            <h2>
-              Avalie filmes que assistiu.<br />
-              Lembre-se daquele que deseja ver.<br />
-              Diga para seus amigos o que é bom.
-            </h2>
-          </div>
-        </div>
+.container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
 
-    </div>
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 40px;
+  width: 100%;
+  height: 50%;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
 
-    <div class="main-content">
-      <div class="Botão">
-        <button type="button" class="btn btn-success">
-          Bem Vindo à Cinéfilos . Com
-        </button>
-      </div>
-      <p>Você assistiu, sentiu, pensou — agora é hora de compartilhar. No Cinéfilos.com, todos podem escrever suas
-        próprias críticas de filmes e ler o que outros cinéfilos têm a dizer. Navegue por avaliações sinceras, descubra
-        novos títulos e participe de uma comunidade movida pela paixão pelo cinema.</p>
-      </section>
+.main-content {
+  padding-left: 40px;
+  padding-right: 40px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
-      <h2>Cinéfilos permite</h2>
+.Botão {
+  display: flex;
+  justify-content: flex-start;
+  margin: 20px 0;
+  max-width: 300px;
+}
 
-      <div class="quadrados">
-        <div class="card">
-          <div class="card-body">
-            <p class="card-text">Acompanhar os filmes que você assistiu</p>
-          </div>
-        </div>
+.Botão button {
+  width: 100%;
+}
 
-        <div class="card">
-          <div class="card-body">
-            <p class="card-text">Avalie filmes com uma escala de 5 estrelas</p>
-          </div>
-        </div>
+h2 {
+  margin-top: 0;
+}
 
-        <div class="card">
-          <div class="card-body">
-            <p class="card-text">Dar sua opinião ou responder a opinião de outros usuário</p>
-          </div>
-        </div>
-      </div>
-      <h1>Filmes</h1>
-      <div class="filmes">
-        <div class="card">
-          <img src="Batman.jpeg" class="card-img-top" alt="Batman">
-          <div class="card-body">
-            <h5 class="card-title">Batman</h5>
-            <p class="card-text">Por Enzo Gabriel</p>
-            <a href="#" class="btn btn-primary">Crítica</a>
-          </div>
-        </div>
+.quadrados {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: flex-start;
+  padding: 20px 0;
+}
 
-        <div class="card">
-          <img src="Internet.jpeg" class="card-img-top" alt="Batman">
-          <div class="card-body">
-            <h5 class="card-title">Internet: O filme</h5>
-            <p class="card-text">Por Gustavo Pereira</p>
-            <a href="#" class="btn btn-primary">Crítica</a>
-          </div>
-        </div>
+.card {
+  width: 100%;
+  max-width: 300px;
+  background-color: #1c1c1c;
+  border: 1px solid #333;
+  border-radius: 8px;
+}
 
-        <div class="card">
-          <img src="Minecraft.jpg" class="card-img-top" alt="Batman">
-          <div class="card-body">
-            <h5 class="card-title">Um filme Minecraft</h5>
-            <p class="card-text">Por Maicon Phelps</p>
-            <a href="#" class="btn btn-primary">Crítica</a>
-          </div>
-        </div>
+.card-body {
+  padding: 20px;
+  text-align: center;
+  color: aliceblue;
+}
 
-        <!-- Adicione mais cards aqui -->
-      </div>
-      <br>
-            <section id="Localização" class="main-content">
-                 <div style="background-color: #212529; padding: 20px; border-radius: 15px; color: white;;">
-        <h2>Localização</h2>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3646.905513903529!2d-46.414923724658614!3d-23.928399678549386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce1bb29bde4aeb%3A0x8b65b60dcd73ad02!2sInstituto%20Federal%20de%20Educa%C3%A7%C3%A3o%2C%20Ci%C3%AAncia%20e%20Tecnologia%20de%20S%C3%A3o%20Paulo%2C%20Campus%20Cubat%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1751686299824!5m2!1spt-BR!2sbr"
-          width="100%" height="350" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <h4>Endereço</h4>
-        <p>Rua Maria Cristina, 50 - Jardim Casqueiro
-        </p>
-        <p>Cubatão - São Paulo
-        </p>
-        <p>Cep: 11533-160
-        </p>
-        </div>
-      </section>
-      <br>
-      <section id="Sobre">
-        <h1>Sobre Nós</h1>
-        <p>
-          Cinéfilos.com é um site dedicado aos amantes do cinema, onde qualquer usuário pode enviar suas próprias
-          críticas
-          de filmes por meio de um formulário simples e acessível. A plataforma surgiu em 2020, criada por um grupo de
-          amigos apaixonados por cinema, com a ideia de dar voz ao público comum — não apenas aos críticos
-          profissionais.
-          <br>
-          <strong>Missão:</strong> Democratizar a crítica cinematográfica, valorizando a opinião de todos os
-          espectadores.
-          <br>
-          <strong>Visão:</strong> Ser a maior comunidade de críticos amadores do Brasil, promovendo debates construtivos
-          e
-          apaixonados
-          sobre cinema.
-        </p>
-        <p><Strong>Valores:</Strong></p>
-        <ul>
-          <li>Liberdade de expressão</li>
-          <li>Respeito à diversidade de opiniões</li>
+footer {
+  margin-top: auto;
+  text-align: center;
+  width: 100%;
+  background-color:  #212529;
+  color: white;
+  padding: 20px;
+}
 
-          <li>Paixão pela sétima arte</li>
+/* Estilos do formulário, fora da media query para aplicar sempre */
+.formulario-critica {
+  background-color: #1c1c1c;
+  padding: 30px 40px;  /* topo/baixo 30px, laterais 40px (igual ao main-content) */
+  margin-top: 60px;
+  border-radius: 12px;
+  border: 1px solid #333;
+  color: white;
+  max-width: 1200px;    /* igual ao main-content */
+  margin-left: auto;    /* centraliza horizontalmente */
+  margin-right: auto;
+    margin-bottom: 40px;
 
-          <li>Comunidade e colaboração</li>
-        </ul>
-        <br>
-        <p>Cinéfilos.com é mais do que um site de críticas — é um espaço para compartilhar experiências, descobrir novos
-          olhares sobre o cinema e fortalecer a cultura audiovisual entre o público geral.</p>
-          </div>
-      </section>
+}
 
+.formulario-critica h2 {
+  margin-bottom: 20px;
+  text-align: start;
+  color: white;
+}
 
-      <section id="Contato">
-        <section class="formulario-critica">
-          <h2>Envie sua crítica</h2>
-          <form action="contato.php" method="post">
-            <div class="mb-3">
-              <label for="nomeUsuario" class="form-label">Seu nome</label>
-              <input type="text" class="form-control" id="nomeUsuario" placeholder="Digite seu nome" required />
-            </div>
+.formulario-critica select.form-control {
+  background-color: #2a2a2a;
+  border: 1px solid #444;
+  color: white;
+}
 
-            <div class="mb-3">
-              <label for="nomeUsuario" class="form-label">Seu nome</label>
-              <input type="text" class="form-control" id="nomeUsuario" placeholder="Digite seu nome" required />
-            </div>
+.formulario-critica .form-label {
+  color: #ccc;
+}
+.filmes .card-img-top {
+  height: 300px; /* defina a altura desejada */
+  object-fit: cover;
+}
+#localizacao {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
 
+.formulario-critica .form-control {
+  background-color: #2a2a2a;
+  border: 1px solid #444;
+  color: white;
+}
 
-            <div class="mb-3">
-              <label for="e-mail" class="form-label">E-mail:</label>
-              <input type="email" class="form-control" id="e-mail" placeholder="aaaa@aaaa" required />
-            </div>
+.formulario-critica .form-control::placeholder {
+ color: white;
+}
 
-            <div class="mb-3">
-              <label for="tel" class="form-label">Telefone:</label>
-              <input type="tel" class="form-control" id="tel" placeholder="(00)0000-0000" required />
-            </div>
+.formulario-critica .btn-primary {
+  background-color: #007bff;
+  border: none;
+  transition: background-color 0.3s;
+}
 
-            <div class="mb-3">
-              <label for="assunto">Assunto:</label>
-              <select name="assunto" class="form-control" id="Assunto">
-                <option value="mensagem">Mensagem para o Site</option>
-                <option value="crítica">Minha Crítica</option>
-              </select>
-            </div>
+.formulario-critica .btn-primary:hover {
+  background-color: #0056b3;
+}
 
-            <div class="mb-3">
-              <label for="titulo" class="form-label">Título:</label>
-              <input type="text" class="form-control" id="titulo" placeholder="Título da Mensagem...." required />
-            </div>
+/* Responsividade */
+@media (max-width: 768px) {
 
-            <div class="mb-3">
-              <label for="critica" class="form-label">Mensagem:</label>
-              <textarea class="form-control" id="critica" rows="4" placeholder="Conteúdo da Mensagem..."
-                required></textarea>
-            </div>
+  .container {
+ height: 130px;
+  }
 
-            <button type="submit" class="btn btn-primary">Enviar crítica</button>
-          </form>
-        </section>
-      </section>
-    </div>
+  .overlay {
+    padding: 20px;
+    height: auto;
+    text-align: center;
+  }
 
-    </div>
-    </div>
+  .card-body {
+    padding: 15px;
+  }
 
-  </main>
+  .Botão {
+    padding: 0 15px;
+    max-width: 100%;
+  }
 
-  <footer>
-    <h5>Desenvolvido por João Victor e Lucas Antônio</h5>
-  </footer>
+  .main-content {
+    padding: 0 20px;
+  }
+}
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-    crossorigin="anonymous"></script>
-</body>
+.filmes {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
 
-</html>
+@media (max-width: 480px) {
+  .container {
+    height: 160px;
+  }
+
+  .overlay h2 {
+    font-size: 1rem;
+  }
+
+  .card-body {
+    padding: 10px;
+  }
+
+  .quadrados {
+    padding: 10px 0;
+  }
+}
